# xucg

./: LICENSE  Makefile.am  README.md  configure.m4
api/: ucg.h  ucg_def.h  ucg_mpi.h  ucg_plan_component.h
base/: Makefile.am  ucg_collective.c  ucg_collective.h  ucg_component.c  ucg_component.h  ucg_context.c  ucg_context.h  ucg_group.c  ucg_group.h  ucg_plan.c  ucg_plan.h  ucg_version.c.in
builtin/: Makefile.am  builtin.c  builtin.h  configure.m4
builtin/ops/: builtin_cb.inl  builtin_control.c  builtin_ops.c  builtin_ops.h
builtin/plan/: builtin_binomial_tree.c  builtin_plan.h  builtin_recursive.c  builtin_ring.c  builtin_topo_info.c
hicoll/: Makefile.am  configure.m4  hicoll.c
