#
# Copyright (c) Huawei Technologies Co., Ltd. 2019.  ALL RIGHTS RESERVED.
# See file LICENSE for terms.
#

noinst_LTLIBRARIES      = libucg_base.la
libucg_base_la_CFLAGS   = $(BASE_CFLAGS)
libucg_base_la_CPPFLAGS = $(BASE_CPPFLAGS)

noinst_HEADERS = \
	ucg_component.h \
	ucg_group.h \
	ucg_context.h \
	ucg_collective.h

libucg_base_la_SOURCES = \
	ucg_component.c \
	ucg_group.c \
	ucg_context.c \
	ucg_collective.c \
	ucg_version.c